--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img src="logo-transparent.png" alt="MK Music Repair" href="#page-top">
+                <img class="img-responsive img-centered" src="img/logo_transparent.png" alt="MK Music Repair">
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
