Filled in actual employees

--- a/index.html
+++ b/index.html
@@ -320,44 +320,23 @@
                         <img src="img/team/mark.jpg" class="img-responsive img-circle" alt="">
                         <h4>Mark Kuklok</h4>
                         <p class="text-muted">Owner</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <p class="text-muted">Mark has been a full time repair technician since 1992. He is a graduate of the Band Instrument Repair Course at Redwing Technical College (now Southeast Technical College) and has a Bachelor of Science degree in Music Education from North Dakota State University. Mark started his instrument repair career in Mankato, MN and started MK Music Repair in Owatonna in 2000.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <img src="img/team/elise.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Elise Egbert</h4>
+                        <p class="text-muted">Brass Assistant</p>
+                        <p class="text-muted">Elise is a Sophomore at the Owatonna High School. She plays French Horn in the concert band and symphony orchestra and sings in the concert choir. She also plays the trumpet in jazz band, pep band, and pit orchestra.  She is involved with her church, Trinity Lutheran, and is the youth council member for the SE MN ELCA Synod.  In her free time, she enjoys reading and watching Marvel movies.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <img src="img/team/jenna.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Jenna Bauman</h4>
+                        <p class="text-muted">Woodwind Assistant</p>
+                        <p class="text-muted">Jenna is a sophomore at the Owatonna High School. She plays clarinet in varsity band, pep-band and marching band. In her free time, she loves to read, hike, bike, usher at church, take care of her six chickens and play with her dog.</p>
                     </div>
                 </div>
             </div>
