--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img class="img-responsive img-centered" src="img/logo_transparent.png" alt="MK Music Repair">
+                <img class="navbar-brand" src="img/logo_transparent.png" alt="MK Music Repair">
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -82,7 +82,6 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To The Shop!</div>
-                <!-- <div class="intro-heading">It's Nice To Meet You</div> -->
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
