--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To The Shop!</div>
+                <div class="intro-lead-in">Welcome To MK Music Repair!</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
