--- a/index.html
+++ b/index.html
@@ -139,7 +139,11 @@
                         <i class="fa fa-road fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Road Route</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted"> For the convenience of our customers, Mark travels two days a week during the school year to pick up and drop off instruments at numerous Southern Minnesota and Suburban schools. The road routes are listed below. If you have an instrument that you would like picked up at one of the schools please contact us by phone or email. Turn-around is usually one week for road route instruments. You will be contacted with an estimate before any work is started.</p>
+                    <ul>
+                        <li>Blooming Prairie High School</li>
+                        <li>Holton Intermidiate School - Austin</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -320,40 +324,15 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
+                    <h3 class="section-subheading text-muted">MK Music Repair<h3>
+                    <h3 class="section-subheading text-muted">114 North Cedar Avenue<h3>
+                    <h3 class="section-subheading text-muted">Owatonna, Minnesota 55060<h3>
+                    <h3 class="section-subheading text-muted">(in the lower level of Tone Music)<h3>
+                    <h3 class="section-subheading text-muted">(507) 456-0706<h3>
+                    <h3 class="section-subheading text-muted">mark@mkmusicrepair.com<h3>
+                    <h3 class="section-subheading text-muted"><h3>
+                    <h3 class="section-subheading text-muted"><h3>
+                    <h3 class="section-subheading text-muted"><h3>
                 </div>
             </div>
         </div>
