Added road routes

--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
                 </div>
                 <div class="col-lg-6 text-center">
                     <h2 class="section-heading">What's New</h2>
-                    <p class="text-muted">We recently purchased a brand new Ultrasonic Cleaner for the shop. It is extremely thorough, and considerably faster, too! It's also better for the environment as it doesn't require any harmful chemicals to operate.</p>
-                    <p class="text-muted">You'll be pleasantly surprised with how clean your instruments will come out!</p>
+                    <p class="text-muted">We recently purchased a brand new Ultrasonic Cleaner for the shop. It is extremely thorough, and considerably faster, too! It's also better for the environment as it doesn't require any harmful chemicals to operate. You'll be pleasantly surprised with how clean your instruments will come out!</p>
                 </div>
             </div>
         </div>
@@ -136,11 +135,53 @@
                         <i class="fa fa-road fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Road Route</h4>
-                    <p class="text-muted"> For the convenience of our customers, Mark travels two days a week during the school year to pick up and drop off instruments at numerous Southern Minnesota and Suburban schools. The road routes are listed below. If you have an instrument that you would like picked up at one of the schools please contact us by phone or email. Turn-around is usually one week for road route instruments. You will be contacted with an estimate before any work is started.</p>
-                    <ul>
+                    <p class="text-muted">For the convenience of our customers, Mark travels two days a week during the school year to pick up and drop off instruments at numerous Southern Minnesota and Suburban schools. The road routes are listed below. If you have an instrument that you would like picked up at one of the schools please contact us by phone or email. Turn-around is usually one week for road route instruments. You will be contacted with an estimate before any work is started.</p>
+
+                    <p class="text-muted">Tuesday</p>
+                    <ul class="text-muted">
                         <li>Blooming Prairie High School</li>
-                        <li>Holton Intermidiate School - Austin</li>
+                        <li>Holton Intermediate School - Austin</li>
+                        <li>Ellis Middle School - Austin</li>
+                        <li>Austin High School </li>
+                        <li>Albert Lea High School</li>
+                        <li>Southwest Middle School - Albert Lea</li>
+                        <li>Alden High School</li>
+                        <li>St. Casimir's School - Wells</li>
+                        <li>USC High School - Wells</li>
+                        <li>Truman High School</li>
+                        <li>Butterfield High School</li>
+                        <li>Mountain Lake High School</li>
+                        <li>St. James High School</li>
+                        <li>Madelia High School</li>
+                        <li>New Ulm Cathedral</li>
+                        <li>New Ulm High School</li>
+                        <li>Nicollet High School</li>
+                        <li>Gustavus Adolphus College</li>
+                        <li>Mankato Loyola High School</li>
+                        <li>Prairie Winds Middle School - Mankato</li>
                     </ul>
+
+                    <p class="text-muted">Wednesday</p>
+                    <ul class="text-muted">
+                        <li>Triton High School</li>
+                        <li>Waseca Central Intermediate School</li>
+                        <li>Waseca Junior/Senior High School</li>
+                        <li>WEM Middle School</li>
+                        <li>New Prague Middle School</li>
+                        <li>New Prague High School</li>
+                        <li>New Prague Elementary Schools</li>
+                        <li>Levi P Dodge Middle School - Farmington</li>
+                        <li>Farmington High School</li>
+                        <li>Eastview High School - Apple Valley</li>
+                        <li>Faribault High School</li>
+                        <li>Faribault Middle School</li>
+                        <li>Bethlehem Academy</li>
+                        <li>Medford High School</li>
+                        <li>Owatonna Middle School</li>
+                        <li>Owatonna High School</li>
+                        <li>St. Mary's School - Owatonna</li>
+                    </ul>
+
                 </div>
             </div>
         </div>
@@ -190,8 +231,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">MK Music Repair<h3>
-                    <h3 class="section-subheading text-muted">114 North Cedar Avenue<h3>
+                    <h3 class="text-muted">MK Music Repair<h3>
+                    <h3 class="text-muted">114 North Cedar Avenue<h3>
                     <h3 class="section-subheading text-muted">Owatonna, Minnesota 55060<h3>
                     <h3 class="section-subheading text-muted">(in the lower level of Tone Music)<h3>
                     <h3 class="section-subheading text-muted">(507) 456-0706<h3>
