Added C Trumpet section, added schedule

--- a/index.html
+++ b/index.html
@@ -225,21 +225,48 @@
         </div>
     </section>
 
+    <!-- C Trumpet Section -->
+    <section id="ctrumpets">
+        <div class="container">
+            <h2 class="section-heading text-center">C Trumpet Conversion</h2>
+            <div class="row">
+                <div class="col-lg-8 text-center">
+
+                    <p class="text-muted">One of the services offered at MK Music Repair is converting a Bb trumpet into a C trumpet. This is not a very large part of the business but it is something that we have been doing off and on for the last 17 years.</p>
+                    <p class="text-muted">We start with an Olds Ambassador Bb trumpet, strip the lacquer, remove the bell, leadpipe, and most of the outer slide tubes. Then we cut tubes to the proper length and rebuild the instrument from the valve casing on up. The leadpipe is replaced with a Bach Strad 25 Bb leadpipe and the tuning slide is reversed. The 1st slide has a saddle installed and the 3rd slide has a fixed ring attached. Both the 1st & 3rd slides are properly fitted for smooth and quick action. The Olds leadpipe/bell braces are discarded and replaced with typical leadpipe/bell to casing braces and "S" braces between the bell and leadpipe. Your choice of conventional or Amado waterkeys are installed. Usually we leave a raw brass with a polished or brushed finish but other finishes are available at an additional cost.</p>
+                    <p class="text-muted">This process is not simply cutting a few slides. We completely disassemble the instrument and rebuild it from the ground up. The completed instrument bears very little resemblance to the original trumpet. We have done about 8 of these conversions and all the owners have been very happy with the way the trumpet plays and the intonation.</p>
+                    <p class="text-muted">It usually takes anywhere from 2 to 4 months to complete a C trumpet conversion depending on the season.</p>
+
+                </div>
+                <div class="col-lg-4 text-center">
+                    <img src="img/CTrumpet1.jpg" class="img-responsive img-square" alt="">
+                    <img src="img/CTrumpet2.jpg" class="img-responsive img-square" alt="">
+                    <img src="img/CTrumpet3.jpg" class="img-responsive img-square" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="text-muted">MK Music Repair<h3>
-                    <h3 class="text-muted">114 North Cedar Avenue<h3>
-                    <h3 class="section-subheading text-muted">Owatonna, Minnesota 55060<h3>
-                    <h3 class="section-subheading text-muted">(in the lower level of Tone Music)<h3>
-                    <h3 class="section-subheading text-muted">(507) 456-0706<h3>
-                    <h3 class="section-subheading text-muted">mark@mkmusicrepair.com<h3>
-                    <h3 class="section-subheading text-muted"><h3>
-                    <h3 class="section-subheading text-muted"><h3>
-                    <h3 class="section-subheading text-muted"><h3>
+                    <h3 class="text-muted">MK Music Repair</h3>
+                    <h3 class="text-muted">114 North Cedar Avenue</h3>
+                    <h3 class="section-subheading text-muted">Owatonna, Minnesota 55060</h3>
+                    <h3 class="section-subheading text-muted">(in the lower level of Tone Music)</h3>
+                    <h3 class="section-subheading text-muted">(507) 456-0706</h3>
+                    <h3 class="section-subheading text-muted">mark@mkmusicrepair.com</h3>
+
+                    <h3 class="section-subheading text-muted">Shop Hours:  (School Year)</h3>
+                    <h3 class="section-subheading text-muted">Monday - 8AM-5PM (out 12-1 for lunch)</h3>
+                    <h3 class="section-subheading text-muted">Tuesday - 1PM-5PM</h3>
+                    <h3 class="section-subheading text-muted">Wednesday - 1PM-5PM</h3>
+                    <h3 class="section-subheading text-muted">Thursday - 8AM-5PM (out 12-1 for lunch)</h3>
+                    <h3 class="section-subheading text-muted">Friday - 8AM-5PM (out 12-1 for lunch)</h3>
+                    <h3 class="section-subheading text-muted">Weekends - By Appointment</h3>
                 </div>
             </div>
         </div>
