Added more improvements

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To MK Music Repair!</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
@@ -136,8 +136,18 @@
                     </span>
                     <h4 class="service-heading">Road Route</h4>
                     <p class="text-muted">For the convenience of our customers, Mark travels two days a week during the school year to pick up and drop off instruments at numerous Southern Minnesota and Suburban schools. The road routes are listed below. If you have an instrument that you would like picked up at one of the schools please contact us by phone or email. Turn-around is usually one week for road route instruments. You will be contacted with an estimate before any work is started.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-                    <p class="text-muted">Tuesday</p>
+    <!-- Road Route Section -->
+    <section id="about">
+        <div class="container">
+            <h2 class="section-heading text-center">Road Routes</h2>
+            <div class="row">
+                <div class="col-lg-6 text-center">
+                    <h4 class="service-heading">Tuesday</h4>
                     <ul class="text-muted">
                         <li>Blooming Prairie High School</li>
                         <li>Holton Intermediate School - Austin</li>
@@ -161,7 +171,9 @@
                         <li>Prairie Winds Middle School - Mankato</li>
                     </ul>
 
-                    <p class="text-muted">Wednesday</p>
+                </div>
+                <div class="col-lg-6 text-center">
+                    <h4 class="service-heading">Wednesday</h4>
                     <ul class="text-muted">
                         <li>Triton High School</li>
                         <li>Waseca Central Intermediate School</li>
@@ -186,7 +198,6 @@
             </div>
         </div>
     </section>
-
     <!-- Team Section -->
     <section id="team" class="bg-light-gray">
         <div class="container">
