--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </section>
 
     <!-- Services Section -->
-    <section id="services">
+    <section id="services" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
