Added all pages to banner

--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#roadroutes">Routes</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#team">Team</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#ctrumpets">C Trumpets</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -142,7 +148,7 @@
     </section>
 
     <!-- Road Route Section -->
-    <section id="about">
+    <section id="roadroutes">
         <div class="container">
             <h2 class="section-heading text-center">Road Routes</h2>
             <div class="row">
