--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img class="navbar-brand" src="img/logo_transparent.png" alt="MK Music Repair">
+                <a href = '#'>
+                    <img class="navbar-brand" src="img/logo_transparent.png" alt="MK Music Repair">
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -270,20 +272,20 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="text-muted">MK Music Repair</h3>
-                    <h3 class="text-muted">114 North Cedar Avenue</h3>
-                    <h3 class="section-subheading text-muted">Owatonna, Minnesota 55060</h3>
-                    <h3 class="section-subheading text-muted">(in the lower level of Tone Music)</h3>
-                    <h3 class="section-subheading text-muted">(507) 456-0706</h3>
-                    <h3 class="section-subheading text-muted">mark@mkmusicrepair.com</h3>
+                    <p class="text-muted">MK Music Repair</p>
+                    <p class="text-muted">114 North Cedar Avenue</p>
+                    <p class="section-subheading text-muted">Owatonna, Minnesota 55060</p>
+                    <p class="section-subheading text-muted">(in the lower level of Tone Music)</p>
+                    <p class="section-subheading text-muted">(507) 456-0706</p>
+                    <p class="section-subheading text-muted">mark@mkmusicrepair.com</p>
 
-                    <h3 class="section-subheading text-muted">Shop Hours:  (School Year)</h3>
-                    <h3 class="section-subheading text-muted">Monday - 8AM-5PM (out 12-1 for lunch)</h3>
-                    <h3 class="section-subheading text-muted">Tuesday - 1PM-5PM</h3>
-                    <h3 class="section-subheading text-muted">Wednesday - 1PM-5PM</h3>
-                    <h3 class="section-subheading text-muted">Thursday - 8AM-5PM (out 12-1 for lunch)</h3>
-                    <h3 class="section-subheading text-muted">Friday - 8AM-5PM (out 12-1 for lunch)</h3>
-                    <h3 class="section-subheading text-muted">Weekends - By Appointment</h3>
+                    <p class="section-subheading text-muted">Shop Hours:  (School Year)</p>
+                    <p class="section-subheading text-muted">Monday - 8AM-5PM (out 12-1 for lunch)</p>
+                    <p class="section-subheading text-muted">Tuesday - 1PM-5PM</p>
+                    <p class="section-subheading text-muted">Wednesday - 1PM-5PM</p>
+                    <p class="section-subheading text-muted">Thursday - 8AM-5PM (out 12-1 for lunch)</p>
+                    <p class="section-subheading text-muted">Friday - 8AM-5PM (out 12-1 for lunch)</p>
+                    <p class="section-subheading text-muted">Weekends - By Appointment</p>
                 </div>
             </div>
         </div>
@@ -293,7 +295,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2014</span>
+                    <span class="copyright">Copyright &copy; MK Music Repair 2020</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -306,12 +308,6 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </div>
