--- a/index.html
+++ b/index.html
@@ -272,10 +272,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <p class="text-muted">MK Music Repair</p>
-                    <p class="text-muted">114 North Cedar Avenue</p>
-                    <p class="section-subheading text-muted">Owatonna, Minnesota 55060</p>
-                    <p class="section-subheading text-muted">(in the lower level of Tone Music)</p>
+                    <p class="text-muted"><b>MK Music Repair</b></br>114 North Cedar Avenue</br>Owatonna, Minnesota 55060</br>(in the lower level of Tone Music)</p>
                     <p class="section-subheading text-muted">(507) 456-0706</p>
                     <p class="section-subheading text-muted">mark@mkmusicrepair.com</p>
 
