--- a/index.html
+++ b/index.html
@@ -269,13 +269,16 @@
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
+            <h2 class="section-heading text-center">Contact Us</h2>
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
+                <div class="col-lg-4 text-center">
                     <p class="text-muted"><b>MK Music Repair</b></br>114 North Cedar Avenue</br>Owatonna, Minnesota 55060</br>(in the lower level of Tone Music)</p>
+                </div>
+                <div class="col-lg-4 text-center">
                     <p class="section-subheading text-muted">(507) 456-0706</p>
                     <p class="section-subheading text-muted">mark@mkmusicrepair.com</p>
-
+                </div>
+                <div class="col-lg-4 text-center">
                     <p class="section-subheading text-muted">Shop Hours:  (School Year)</p>
                     <p class="section-subheading text-muted">Monday - 8AM-5PM (out 12-1 for lunch)</p>
                     <p class="section-subheading text-muted">Tuesday - 1PM-5PM</p>
