--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="container">
             <h2 class="section-heading text-center">Road Routes</h2>
             <div class="row">
-                <div class="col-lg-6 text-center">
+                <div class="col-lg-6">
                     <h4 class="service-heading">Tuesday</h4>
                     <ul class="text-muted">
                         <li>Blooming Prairie High School</li>
@@ -180,7 +180,7 @@
                     </ul>
 
                 </div>
-                <div class="col-lg-6 text-center">
+                <div class="col-lg-6">
                     <h4 class="service-heading">Wednesday</h4>
                     <ul class="text-muted">
                         <li>Triton High School</li>
@@ -275,11 +275,10 @@
                     <p class="text-muted"><b>MK Music Repair</b></br>114 North Cedar Avenue</br>Owatonna, Minnesota 55060</br>(in the lower level of Tone Music)</p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <p class="section-subheading text-muted">(507) 456-0706</p>
-                    <p class="section-subheading text-muted">mark@mkmusicrepair.com</p>
+                    <p class="section-subheading text-muted"><b>(507) 456-0706</br>mark@mkmusicrepair.com</b></p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <p class="section-subheading text-muted">Shop Hours:  (School Year)</p>
+                    <p class="section-subheading text-muted"><b>Shop Hours:  (School Year)</b></p>
                     <p class="section-subheading text-muted">Monday - 8AM-5PM (out 12-1 for lunch)</p>
                     <p class="section-subheading text-muted">Tuesday - 1PM-5PM</p>
                     <p class="section-subheading text-muted">Wednesday - 1PM-5PM</p>
