--- a/index.html
+++ b/index.html
@@ -272,13 +272,16 @@
             <h2 class="section-heading text-center">Contact Us</h2>
             <div class="row">
                 <div class="col-lg-4 text-center">
-                    <p class="text-muted"><b>MK Music Repair</b></br>114 North Cedar Avenue</br>Owatonna, Minnesota 55060</br>(in the lower level of Tone Music)</p>
+                    <h3 class="text-muted">Address</h3>
+                    <p class="text-muted">MK Music Repair</br>114 North Cedar Avenue</br>Owatonna, Minnesota 55060</br>(in the lower level of Tone Music)</p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <p class="section-subheading text-muted"><b>(507) 456-0706</br>mark@mkmusicrepair.com</b></p>
+                    <h3 class="text-muted">Phone & Email</h3>
+                    <p class="section-subheading text-muted">(507) 456-0706</br>mark@mkmusicrepair.com</p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <p class="section-subheading text-muted"><b>Shop Hours:  (School Year)</b></p>
+                    <h3 class="text-muted">Hours</h3>
+                    <p class="section-subheading text-muted">Shop Hours:  (School Year)</p>
                     <p class="section-subheading text-muted">Monday - 8AM-5PM (out 12-1 for lunch)</p>
                     <p class="section-subheading text-muted">Tuesday - 1PM-5PM</p>
                     <p class="section-subheading text-muted">Wednesday - 1PM-5PM</p>
