--- a/index.html
+++ b/index.html
@@ -98,14 +98,16 @@
             <div class="row">
                 <div class="col-lg-6 text-center">
                     <h2 class="section-heading">About Us</h2>
-                    <p class="text-muted">We are a full service band instrument repair shop that specializes in the repair, maintenance and restoration of brass, woodwind and percussion instruments. Started as Mark Kuklok Band Instrument Repair, we have been providing schools, teachers and students with convenient, professional, and affordable repair for over 18 years.</p>
-                    <p class="text-muted">We are located in downtown Owatonna, Minnesota in the lower level of Tone Music (www.tonemusicmn.com).</p>
-                    <p class="text-muted">During the school year we offer weekly pick-up and drop-off of instruments at area schools. Turn-around time is usually 1 week. Please click on the Services tab for more information.</p>
-                    <p class="text-muted">Note: We do not have the staff or expertise to repair string or electronic instruments including guitars.</p>
+                    <p class="text-muted">We are a full service band instrument repair shop that specializes in the repair, maintenance and restoration of brass, woodwind and percussion instruments. Started as Mark Kuklok Band Instrument Repair, we have been providing schools, teachers and students with convenient, professional, and affordable repair for 20+ years.</p>
+                    <p class="text-muted">We are located in downtown Owatonna, Minnesota in the lower level of <a href="http://www.tonemusicmn.com">Tone Music</a>.</p>
+                    <p class="text-muted">During the school year we offer free weekly pick-up and drop-off of instruments at area schools. Turn-around time is usually 1 week. Please click on the Services tab for more information.</p>
                 </div>
                 <div class="col-lg-6 text-center">
                     <h2 class="section-heading">What's New</h2>
                     <p class="text-muted">We recently purchased a brand new Ultrasonic Cleaner for the shop. It is extremely thorough, and considerably faster, too! It's also better for the environment as it doesn't require any harmful chemicals to operate. You'll be pleasantly surprised with how clean your instruments will come out!</p>
+                    <div class="col-lg-12 text-center">
+                        <img src="img/ToneMusic1.jpg" class="img-responsive" style="width:100%;height:auto" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -117,7 +119,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -127,7 +129,8 @@
                         <i class="fa fa-wrench fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Repairs</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">MK Music Repair has 20+ years of expertise in instrument repair, so we have the expertise to fix just about any damage to an instrument. Pricing for repairs is done on a case-by-case basis. You can bring your instrument down, and we will estimate the price of the repairs.</p>
+                    <p class="text-muted">Note: We unfortunately have neither the staff nor expertise to repair string or electronic instruments including guitars.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -135,7 +138,7 @@
                         <i class="fa fa-thumbs-up fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Cleaning</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">We offer standard cleanings for all brass and woodwind instruments. Pricing varies by brand and by instrument, however, below are estimates by instrument</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -281,7 +284,6 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <h3 class="text-muted">Hours</h3>
-                    <p class="section-subheading text-muted">Shop Hours:  (School Year)</p>
                     <p class="section-subheading text-muted">Monday - 8AM-5PM (out 12-1 for lunch)</p>
                     <p class="section-subheading text-muted">Tuesday - 1PM-5PM</p>
                     <p class="section-subheading text-muted">Wednesday - 1PM-5PM</p>
