Reworked a lot of images

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <div class="col-lg-4 text-center">
                     <h3 class="text-muted">Hours</h3>
                     <p class="section-subheading text-muted">Monday - 8AM-5PM (out 12-1 for lunch)</p>
-                    <p class="section-subheading text-muted">Tuesday - 1PM-5PM</p>
+                    <p class="section-subheading text-muted">Tuesday - Assistants are in 1PM-5PM</p>
                     <p class="section-subheading text-muted">Wednesday - 1PM-5PM</p>
                     <p class="section-subheading text-muted">Thursday - 8AM-5PM (out 12-1 for lunch)</p>
                     <p class="section-subheading text-muted">Friday - 8AM-5PM (out 12-1 for lunch)</p>
