Fixed Tone Music Images

--- a/index.html
+++ b/index.html
@@ -106,7 +106,14 @@
                     <h2 class="section-heading">What's New</h2>
                     <p class="text-muted">We recently purchased a brand new Ultrasonic Cleaner for the shop. It is extremely thorough, and considerably faster, too! It's also better for the environment as it doesn't require any harmful chemicals to operate. You'll be pleasantly surprised with how clean your instruments will come out!</p>
                     <div class="col-lg-12 text-center">
-                        <img src="img/ToneMusic1.jpg" class="img-responsive" style="width:100%;height:auto" alt="">
+                        <div class="row">
+                            <div class="col-lg-6 text-center">
+                                <img src="img/ToneMusicFront.jpg" class="img-responsive" style="width:100%;height:auto" alt="">
+                            </div>
+                            <div class="col-lg-6 text-center">
+                                <img src="img/ToneMusicBack.jpg" class="img-responsive" style="width:100%;height:auto" alt="">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
