--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                     <h2 class="section-heading">About Us</h2>
                     <p class="text-muted">We are a full service band instrument repair shop that specializes in the repair, maintenance and restoration of brass, woodwind and percussion instruments. Started as Mark Kuklok Band Instrument Repair, we have been providing schools, teachers and students with convenient, professional, and affordable repair for 20+ years.</p>
                     <p class="text-muted">We are located in downtown Owatonna, Minnesota in the lower level of <a href="http://www.tonemusicmn.com">Tone Music</a>.</p>
+                    <p class="text-muted">We also do repair for <a href="http://www.wasecamusic.com">Waseca Music</a>. </p>
                     <p class="text-muted">During the school year we offer free weekly pick-up and drop-off of instruments at area schools. Turn-around time is usually 1 week. Please click on the Services tab for more information.</p>
                 </div>
                 <div class="col-lg-6 text-center">
@@ -146,6 +147,9 @@
                     </span>
                     <h4 class="service-heading">Cleaning</h4>
                     <p class="text-muted">We offer standard cleanings for all brass and woodwind instruments. Pricing varies by brand and by instrument, however, below are estimates by instrument</p>
+                    <p class="text-muted">Brass Cleanings starting at $60</p>
+                    <p class="text-muted">Woodwind Cleanings starting at $50</p>
+                    <p class="text-muted">Woodwind Repadding starting at $200</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -176,7 +180,6 @@
                         <li>Alden High School</li>
                         <li>St. Casimir's School - Wells</li>
                         <li>USC High School - Wells</li>
-                        <li>Truman High School</li>
                         <li>Butterfield High School</li>
                         <li>Mountain Lake High School</li>
                         <li>St. James High School</li>
@@ -308,17 +311,7 @@
                 <div class="col-md-4">
                     <span class="copyright">Copyright &copy; MK Music Repair 2020</span>
                 </div>
-                <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-8">
                 </div>
             </div>
         </div>
