--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <h2 class="section-heading">About Us</h2>
                     <p class="text-muted">We are a full service band instrument repair shop that specializes in the repair, maintenance and restoration of brass, woodwind and percussion instruments. Started as Mark Kuklok Band Instrument Repair, we have been providing schools, teachers and students with convenient, professional, and affordable repair for 20+ years.</p>
                     <p class="text-muted">We are located in downtown Owatonna, Minnesota in the lower level of <a href="http://www.tonemusicmn.com">Tone Music</a>.</p>
-                    <p class="text-muted">We also do repair for <a href="http://www.wasecamusic.com">Waseca Music</a>. </p>
+                    <p class="text-muted">We also do repair for Jim Kozan and <a href="http://www.wasecamusic.com">Waseca Music</a>. We are proud to be the exclusive repair shop for Waseca Music!</p>
                     <p class="text-muted">During the school year we offer free weekly pick-up and drop-off of instruments at area schools. Turn-around time is usually 1 week. Please click on the Services tab for more information.</p>
                 </div>
                 <div class="col-lg-6 text-center">
@@ -234,7 +234,7 @@
                         <img src="img/team/mark.jpg" class="img-responsive img-circle" alt="">
                         <h4>Mark Kuklok</h4>
                         <p class="text-muted">Owner</p>
-                        <p class="text-muted">Mark has been a full time repair technician since 1992. He is a graduate of the Band Instrument Repair Course at Redwing Technical College (now Southeast Technical College) and has a Bachelor of Science degree in Music Education from North Dakota State University. Mark started his instrument repair career in Mankato, MN and started MK Music Repair in Owatonna in 2000.</p>
+                        <p class="text-muted">Mark has been a full time repair technician since 1992. He is a graduate of the Band Instrument Repair Course at Redwing Technical College (now Southeast Technical College) and has a Bachelor of Science degree in Music Education from North Dakota State University. Mark started his instrument repair career in Mankato, MN and opened MK Music Repair in Owatonna in 2000.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
